public interface Roles {

    //Method that will be implemented by customer
    public String getRole();

}
